# jadeos

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  THIRD_PARTY_NOTICES.md  docker-compose.yml  emscripten.cross  meson.build  meson_options.txt  serve.sh
assets/videos/badapple/: files.txt  sequence.example.txt
cross/: emscripten.ini
deploy/nginx/: default.conf
scripts/: export-badapple-media.sh  patch-helix-wasm.py  regen-third-party-patches.sh  vendor-third-party.sh
src/: main.cpp  meson.build
src/audio/: jade_audio.cpp  jade_audio.hpp
src/bindings/: wasm_bindings.cpp
src/cpu/: cpu.cpp  cpu.hpp  memory.cpp  memory.hpp  registers.hpp
src/gpu/: font.cpp  font.hpp  framebuffer.hpp  gpu.cpp  gpu.hpp  rasterizer.cpp  rasterizer.hpp
src/os/: filesystem.cpp  filesystem.hpp  kernel.cpp  kernel.hpp  scheduler.cpp  scheduler.hpp  terminal.cpp  terminal.hpp  wm.cpp  wm.hpp
src/os/apps/: apputil.hpp  calculator.cpp  calculator.hpp  clock.cpp  clock.hpp  doom_port.cpp  doom_port.hpp  fileexplorer.cpp  fileexplorer.hpp  media_player.cpp  media_player.hpp  taskmanager.cpp  taskmanager.hpp  wasminfo.cpp  wasminfo.hpp
web/: emscripten-cross.ini  index.html  main.js  meson.build  styles.css
